src/css/cover.scss
@import './variables';

.cover {
    height: 100%;
    position: relative;
    overflow: hidden;
    z-index: -1;
    margin: 0;

    .parallax-inner {
        height: 100%;
    }

    .absoluteContainer {
        @include cover();
    }

    .dayBackground {
        @include cover();
        background: linear-gradient(to bottom, $sky_blue, $sky_grey);
    }

    .nightBackground {
        @include cover();
        opacity: 0;
        background: linear-gradient(to bottom, $night_blue, $night_purple);
        transition: opacity $long_duration;
    }

    .sunAndMoon {
        @include cover();
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: center;
        padding: $large_spacing 0;
        overflow: hidden;
        transition: transform $long_duration;

        .sun,
        .moon {
            border-radius: 50%;
            margin-left: 30%;
        }

        .sun {
            width: 150px;
            height: 150px;
            background: #fffaac;
            box-shadow: 0px 0px 30px #fffaac;
        }

        .moon {
            width: 100px;
            height: 100px;
            background: $white;
            box-shadow: 0px 0px 30px white;
        }
    }

    .myInfo {
        @include cover();
        display: flex;
        align-items: center;
        justify-content: center;
        font-weight: bold;
        text-align: center;
        padding-bottom: $large_spacing;
        margin: 0;
    }

    .city {
        @include cover();
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
        align-items: center;

        .image {
            width: calc(100% + 2px);
            min-width: 1200px;
        }

        img {
            vertical-align: top;
        }
    }

    &.scrolled {
        .nightBackground {
            opacity: 1;
        }

        .sunAndMoon {
            transform: rotate(160deg);
        }
    }
}

